Added content to cards
added content to cards and description

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
           <p class="card-body"> Enter a location to get the current temperature, wind speed, and weather.Check weather for multiple locations easily!
             <br>
             <br>
+            <br>
             <div class="technologies-used">
               <i class="fab fa-html5"></i>
               <i class="fab fa-css3-alt"></i>
@@ -147,7 +148,7 @@
           <br />
           <a
             target="_blank"
-            href="https://nacho185.github.io/netflix-clone/"
+            href="https://nacho185.github.io/weather-app-v2/"
             class="button-portfolio"
             >Live Code</a
           >
@@ -171,8 +172,7 @@
               <div class="technologies-used">
                 <i class="fab fa-html5"></i>
                 <i class="fab fa-css3-alt"></i>
-                <i class="fab fa-js"></i>
-                <i class="fab fa-react"></i>
+                <i class="fab fa-python" style="color:#4584b6;"></i>
               </div>
             </p>
             <br /> <br/>
@@ -195,11 +195,11 @@
           class="project-card card-5"
         >
           <div class="card-content">
-            <h2 class="card-title">crypto-tracker</h2>
+            <h2 class="card-title">Crypto Tracker</h2>
             <br />
             <p class="card-body">
-              Search any crypto's current value | <br />made with react and
-              coinGecko api
+              Enter the name of a cryptocurrency, and get the current price, market data, and trends from multiple exchanges using live API data.
+              <br>
               <br>
               <br>
               <div class="technologies-used">
@@ -343,13 +343,13 @@
       </div>
         <i class="fab fa-html5"></i>
         <i class="fab fa-css3-alt"></i>
-        <i class="fab fa-sass"></i>
         <i class="fab fa-js"></i>
-        <i class="fab fa-git-square"></i>
         <i class="fab fa-react"></i>
+        <i class="fab fa-git-square"></i>
         <div class="skills-no-icon">
-          <img src="./assets/img/jquery.jpg" alt="">
+          <i class="fab fa-python" style="color:#4584b6;"></i>
         </div>
+        <i class="fab fa-sass"></i>
         
      </div>
    </section>
