added project card
Added project card and added coming soon to projects i want to add later that are under construction

--- a/index.html
+++ b/index.html
@@ -228,11 +228,9 @@
           class="project-card card-2"
         >
           <div class="card-content">
-            <h2 class="card-title">Weather-app</h2>
+            <h2 class="card-title">Email Validator</h2>
             <br />
-            <p class="card-body">Weather App made with openweather api
-              <br>
-              <br>
+            <p class="card-body">This tool also identifies disposable email addresses and helps you avoid spam by validating whether an email is free or temporary.
               <br>
               <div class="technologies-used">
                 <i class="fab fa-html5"></i>
@@ -246,7 +244,7 @@
             <br />
             <a
               target="_blank"
-              href="https://nacho185.github.io/weather-app-v2/"
+              href="https://nacho185.github.io/Email-Validation/"
               class="button-portfolio"
               >Live Code</a
             >
@@ -264,10 +262,11 @@
           class="project-card card-1"
         >
           <div class="card-content">
-            <h2 class="card-title">Email Validation</h2>
+            <h2 class="card-title">Coming Soon</h2>
             <br />
             <p class="card-body">
-              Measure an emails deliverability ,and  quality
+              <br>
+              <br>
               <br>
               <br>
               <div class="technologies-used">
@@ -282,7 +281,7 @@
             <br />
             <a
               target="_blank"
-              href="https://nacho185.github.io/Email-Validation/"
+              href=""
               class="button-portfolio"
               >Live Code</a
             >
@@ -301,9 +300,12 @@
           class="project-card card-4"
         >
           <div class="card-content">
-            <h2 class="card-title">EcoStrip 9380</h2>
+            <h2 class="card-title">Coming Soon</h2>
             <p class="card-body">
-              Here is a wordpress website explaining how to use my favorite machine so far in my career as a machine operator using wordpress as my editor.
+            <br>
+            <br>
+            <br>
+            <br>
             <br>
             <br>
               <div class="technologies-used">
