Aligned contact section
made contact section more centered and added subheading

--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
 <!--contact section-->
 <section id="contact" class="contact-wrapper">
   <div class="contact-header"><h1>Feel free to contact me</h1></div>
+  <p class="contact-subtitle">I’m always open to new opportunities or collaborations!</p>
   <div class="container">
     <div class="contact-01">
       <a href="mailto:ignacio13542@gmail.com">
