--- a/index.html
+++ b/index.html
@@ -367,6 +367,11 @@
         <i class="fas fa-envelope"></i>
       </a>
     </div>
+    <div class="contact-04">
+      <a href="https://www.linkedin.com/in/ignacio-a-17b2a31ba/">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
     <div class="contact-02">
       <a  target="_blank" href="https://github.com/nacho185"><h1><i style="font-size: 4.5rem; color: #f8f8f8;" class="fab fa-github"></i></h1></a>
     </div>
