--- a/index.html
+++ b/index.html
@@ -373,7 +373,10 @@
       </a>
     </div>
     <div class="contact-02">
-      <a  target="_blank" href="https://github.com/nacho185"><h1><i style="font-size: 4.5rem; color: #f8f8f8;" class="fab fa-github"></i></h1></a>
+      <a  target="_blank" href="https://github.com/nacho185"><a target="_blank" href="https://github.com/nacho185">
+  <i style="font-size: 4.5rem; color: #f8f8f8;" class="fab fa-github"></i>
+</a>
+</a>
     </div>
     <div class="contact-03">
       <a href="tel:346-212-8318">
